--- a/OrchestratorWebApp/_Imports.razor
+++ b/OrchestratorWebApp/_Imports.razor
@@ -5,6 +5,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
 @using OrchestratorWebApp
 @using OrchestratorWebApp.Layout
+@using OrchestratorWebApp.Services
