add Radzen Blazor to web app

--- a/OrchestratorWebApp/Layout/MainLayout.razor
+++ b/OrchestratorWebApp/Layout/MainLayout.razor
@@ -4,7 +4,8 @@
         <NavMenu />
     </div>
 
-    <main>        <div class="top-row px-4">
+    <main>
+        <div class="top-row px-4">
             <AuthorizeView>
                 <Authorized>
                     <span class="text-success me-3">Welcome, @context.User.Identity?.Name!</span>
@@ -22,3 +23,5 @@
         </article>
     </main>
 </div>
+
+<RadzenComponents />
