--- a/OrchestratorWebApp/_Imports.razor
+++ b/OrchestratorWebApp/_Imports.razor
@@ -11,4 +11,5 @@
 @using Microsoft.JSInterop
 @using OrchestratorWebApp
 @using OrchestratorWebApp.Layout
-@using OrchestratorWebApp.Services
+@using Radzen
+@using Radzen.Blazor
