--- a/OrchestratorWebApp/Layout/NavMenu.razor
+++ b/OrchestratorWebApp/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">OrchestratorWebApp</a>
+        <a class="navbar-brand" href="">🤖 Agent as a Service</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,17 +15,28 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="projects">
+                <span class="bi bi-folder-fill-nav-menu" aria-hidden="true"></span> Projects
             </NavLink>
-        </div>        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="status">
+                <span class="bi bi-activity-nav-menu" aria-hidden="true"></span> System Status
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="api-test">
                 <span class="bi bi-gear-fill-nav-menu" aria-hidden="true"></span> API Test
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="counter">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            </NavLink>
+        </div>        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="weather">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
     </nav>
