--- a/OrchestratorWebApp/Layout/NavMenu.razor
+++ b/OrchestratorWebApp/Layout/NavMenu.razor
@@ -13,8 +13,7 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
-        </div>
-        <div class="nav-item px-3">
+        </div>        <div class="nav-item px-3">
             <NavLink class="nav-link" href="projects">
                 <span class="bi bi-folder-fill-nav-menu" aria-hidden="true"></span> Projects
             </NavLink>
